<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistrarParent"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundkodible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodible"
            android:textColor="@color/white"
            android:fontFamily="@font/kanit"
            android:textSize="35sp">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_register"
            android:textColor="@color/yellowDark"
            android:fontFamily="@font/kanit"
            android:textSize="50sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:padding="5dp"


            />
        <EditText
            android:id="@+id/regpassword"
            android:layout_width="300dp"
            android:padding="5dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/regComPassword"
            android:layout_width="300dp"
            android:padding="5dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/comfirm_password"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@color/grey">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="29sp"
            android:textColor="@color/white"
            android:fontFamily="@font/kanit"
            android:text="@string/have_an_account"
            android:layout_marginRight="5dp">

        </TextView>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="33sp"
            android:textColor="@color/yellow">

        </TextView>
    </LinearLayout>


</LinearLayout>