<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterChild"
    android:orientation="vertical"
    android:background="@drawable/backgroundkodible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids_kodible"
            android:textColor="@color/white"
            android:fontFamily="@font/kanit"
            android:textSize="38sp">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kids_register"
            android:textColor="@color/yellowDark"
            android:fontFamily="@font/kanit"
            android:textSize="50sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/kidregUserNameET"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/username"
            android:textSize="30sp"
            android:padding="5dp"
            />
        <EditText
            android:id="@+id/kidregEmailET"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:padding="5dp"


            />
        <EditText
            android:id="@+id/kidregPasswordET"
            android:layout_width="300dp"
            android:padding="5dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/kidregComPasswordET"
            android:layout_width="300dp"
            android:padding="5dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/comfirm_password"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/regButtonB"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:background="@color/grey">
        </Button>
    </LinearLayout>


</LinearLayout>