<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="@drawable/starry"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textSize="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/my_games"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/kanit"
                >

            </TextView>
            <ImageButton
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_person_24"
                >

            </ImageButton>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical">
        <GridLayout
            android:columnOrderPreserved="false"
            android:columnCount="3"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dashGame1"
                android:text="@string/game1"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:textStyle="bold"
                android:textSize="19dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/game1dash"
                android:layout_margin="12dp"
                android:layout_column="0"
                android:layout_row="0">
            </Button>
            <Button
                android:id="@+id/dashGame2"
                android:text="@string/game2"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:textStyle="bold"
                android:textSize="19dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@drawable/game2"
                android:layout_column="1"
                android:layout_row="0">
            </Button>
            <Button
                android:id="@+id/dashGame3"
                android:text="@string/game3"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:textStyle="bold"
                android:textSize="19dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="12dp"
                android:layout_gravity="center"
                android:background="@drawable/game3"

                android:layout_column="2"
                android:layout_row="0">
            </Button>

        </GridLayout>
        </LinearLayout>
</LinearLayout>
</LinearLayout>