<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2lvl2"
    android:orientation="vertical"
    android:background="@drawable/game2lvl2bck">

    <TextView
        android:id="@+id/scorelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:fontFamily="@font/kanit"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        >

    </TextView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="60dp"
            android:background="@color/yellowDark"
            android:padding="10dp"
            android:text="@string/start"
            android:textSize="30sp">

        </Button>

        <ImageView
            android:id="@+id/box"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="200dp"
            android:src="@drawable/gummi">

        </ImageView>


        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="70dp">

            <Button
                android:id="@+id/btn_bck"
                android:tag="LEFT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:background="@drawable/left"
                android:contentDescription="@string/up"
                />
            <Button
                android:id="@+id/btn_dwn"
                android:layout_width="0dp"
                android:tag="DOWN"
                android:padding="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/downarraw"

                />
            <Button
                android:id="@+id/btn_fwd"
                android:layout_width="0dp"
                android:padding="12dp"
                android:tag="RIGHT"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rightarrow"

                />
            <Button
                android:id="@+id/btn_up"
                android:layout_width="0dp"
                android:padding="12dp"
                android:tag="UP"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_arrow_upward_24"

                />



        </LinearLayout>
        <LinearLayout

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp">

            <Button
                android:id="@+id/btn_drop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:tag="RIGHT"
                android:textSize="40sp"
                android:background="@drawable/ic_baseline_add_box_24"
                android:padding="12dp" />
            <Button
                android:id="@+id/btn_drop2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:tag="UP"
                android:textSize="40sp"
                android:background="@drawable/ic_baseline_add_box_24"
                android:padding="12dp" />
            <Button
                android:id="@+id/btn_drop3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:tag="RIGHT"
                android:textSize="40sp"
                android:background="@drawable/ic_baseline_add_box_24"
                android:padding="12dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellowDark"
                android:text="@string/play"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_margin="5dp"
                android:background="@color/yellowDark"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:textSize="20sp"/>


            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_margin="5dp"
                android:background="@color/yellowDark"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:textSize="20sp"/>

        </LinearLayout>



    </FrameLayout>


</LinearLayout>

